# ex_mmo_cluster

./: .dockerignore  .formatter.exs  .gitattributes  .gitignore  .gitmodules  .mcp.json  .tool-versions  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  MnesiaCore.nonode@nohost_1775_823792_552143  MnesiaCore.nonode@nohost_1775_825214_193973  PROTOCOL.md  README.md  mix.exs
.codex/: config.toml
.omc/: prd.json  progress.txt
apps/scene_server/native/coordinate_system/: Cargo.toml  README.md
apps/scene_server/native/coordinate_system/docs/: 2026-04-10-NIF说明.md
apps/scene_server/native/coordinate_system/src/: bucket.rs  calc.rs  configuration.rs  coordinate_system.rs  item.rs  lib.rs  sorted_set.rs  types.rs
apps/scene_server/native/field_kernel/: Cargo.toml
apps/scene_server/native/field_kernel/src/: cell_sim.rs  conduction_path.rs  discharge_path.rs  electric_potential.rs  field_constants.rs  grid.rs  lib.rs  temperature_diffusion.rs  types.rs
apps/scene_server/native/movement_core/: Cargo.toml
apps/scene_server/native/movement_core/benches/: integrator_bench.rs
apps/scene_server/native/movement_core/src/: ack.rs  input.rs  integrator.rs  lib.rs  math.rs  mode.rs  profile.rs  state.rs
apps/scene_server/native/movement_engine/: Cargo.toml
apps/scene_server/native/movement_engine/src/: atoms.rs  integrator.rs  lib.rs  math.rs  types.rs
apps/scene_server/native/octree/: Cargo.toml  README.md
apps/scene_server/native/octree/docs/: 2026-04-10-NIF说明.md
apps/scene_server/native/octree/src/: bounding_box.rs  lib.rs  octree.rs  octree_item.rs  octree_node.rs  types.rs
apps/scene_server/native/octree/src/debug_types/: bounding_box_debug.rs  mod.rs  octree_debug.rs  octree_item_debug.rs  octree_node_debug.rs
apps/scene_server/native/scene_ops/: Cargo.toml  README.md
apps/scene_server/native/scene_ops/docs/: 2026-04-10-NIF说明.md
apps/scene_server/native/scene_ops/src/: lib.rs
apps/scene_server/native/scene_ops/src/character/: character_data.rs  dev_attrs.rs  mod.rs  movement.rs  physics_comp.rs  types.rs
apps/scene_server/native/scene_ops/src/physics/: mod.rs  physics_system.rs  pipeline.rs
apps/scene_server/native/sorted_set/: Cargo.toml  README.md
apps/scene_server/native/sorted_set/src/: bucket.rs  configuration.rs  coordinate_system.rs  item.rs  lib.rs  sorted_set.rs
apps/scene_server/native/world_gen_noise/: Cargo.toml
apps/scene_server/native/world_gen_noise/src/: lib.rs
clients/bevy_client/: .gitignore  Cargo.toml  README.md
clients/bevy_client/benches/: predictor_bench.rs
clients/bevy_client/scripts/: va-stdio.ps1
clients/bevy_client/src/: README.md  app.rs  auth_client.rs  config.rs  headless.rs  lib.rs  login.rs  main.rs  movement.rs  movement_codec.rs  net.rs  observe.rs  protocol.rs  protocol_v2.rs  skill_targeting.rs  stdio.rs
clients/bevy_client/src/app/: mod.rs  plugins.rs  schedule.rs
clients/bevy_client/src/camera/: mod.rs  orbit.rs  plugin.rs
clients/bevy_client/src/chat/: mod.rs  plugin.rs
clients/bevy_client/src/effects/: mod.rs  plugin.rs
clients/bevy_client/src/headless/: mod.rs  runner.rs  script.rs  state.rs  voxel_runner.rs
clients/bevy_client/src/hud/: build_hotbar.rs  edit_feedback.rs  mod.rs  plugin.rs
clients/bevy_client/src/input/: README.md  commands.rs  mod.rs
clients/bevy_client/src/movement/: mod.rs  plugin.rs
clients/bevy_client/src/net/: events.rs  fastlane.rs  mod.rs  observe.rs  plugin.rs  runtime.rs  thread.rs  transport.rs
clients/bevy_client/src/presentation/: README.md  animation.rs  camera.rs  mod.rs  plugin.rs  smoothing.rs
clients/bevy_client/src/scene/: mod.rs
clients/bevy_client/src/session/: auth.rs  mod.rs  plugin.rs  reconnect.rs
clients/bevy_client/src/sim/: README.md  correction.rs  governance.rs  history.rs  jitter.rs  mod.rs  predictor.rs  profile.rs  reconcile.rs  types.rs
clients/bevy_client/src/skill/: mod.rs  plugin.rs  targeting.rs
clients/bevy_client/src/stdio/: mod.rs  plugin.rs
clients/bevy_client/src/voxel/: README.md  authority.rs  authority_plugin.rs  build_palette.rs  chunk_render.rs  cli.rs  debris.rs  debris_render.rs  field_render.rs  field_view.rs  heat_smoke.rs  heat_smoke_render.rs  incandescence.rs  incandescence_render.rs  layer3_pixel.rs  lightning.rs  lightning_render.rs  live_pick.rs  mesher.rs  mod.rs  persistence.rs  plugin.rs  semiconductor_overlay.rs  semiconductor_render.rs  skylight.rs  surface_decal.rs
clients/bevy_client/src/voxel/core/: coord.rs  mask.rs  material.rs  mod.rs
clients/bevy_client/src/voxel/prefab/: boundary.rs  builtins.rs  definition.rs  mod.rs  registry.rs  rotation.rs
clients/bevy_client/src/voxel/wire/: blocks.rs  catalog_patch.rs  cursor.rs  delta.rs  edit_intent.rs  field.rs  intent_result.rs  invalidate.rs  mod.rs  object_state.rs  prefab_place_intent.rs  snapshot.rs  subscribe.rs  surface_element_intent.rs
clients/bevy_client/src/voxel/world/: hotbar.rs  mod.rs  snapshot.rs  store.rs
clients/bevy_client/src/world/: README.md  local_player.rs  mod.rs  remote_actor.rs  remote_player.rs
clients/bevy_client/tests/: voxel_cli_parity.rs  voxel_parity.rs  voxel_pipeline.rs  voxel_socket.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml  nginx.conf.example  setup_multi_fixture.exs  upgrade.sh
docs/: 2026-04-07-增量迁移计划.md  2026-04-10-gate_server协议补全计划.md  2026-04-10-传输协议现状与后续规划.md  2026-04-10-线协议规范.md  2026-04-10-项目概览.md  2026-04-12-cli-observability-debugging.md  2026-04-12-移动同步-vNext-第一阶段实施清单.md  2026-04-12-移动同步项目实现蓝图.md  2026-04-13-NPC服务端表示设计.md  2026-04-13-固定Tick权威移动重构.md  2026-04-13-技能战斗权威闭环.md  2026-04-13-最终位置偏差系统性原因分析.md  2026-04-13-移动同步-vNext-后续缺口清单.md  2026-04-13-移动同步-vNext-阶段三-远端插值与回放治理.md  2026-04-13-移动同步-vNext-阶段二-Rustler计算核心.md  2026-04-14-Rustler-0.37.3-升级验证记录.md  2026-04-14-框架底座与业务解耦架构方案.md  2026-04-14-阶段进度总览.md  2026-04-15-游戏内容主流程框架化方案.md  2026-04-15-通用多技能Demo战斗系统.md  2026-04-17-Phoenix-1-8-升级记录.md  2026-04-17-上线-Docker-CI-部署方案.md  2026-04-17-场景空间索引架构设计.md  2026-04-17-服务器部署手册.md  (+48 more)
(+1592 files in other folders)
