[package]
name = "bevy_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d"] }
bevy_egui = "0.39"
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
