[package]
name = "bevy_client"
version = "0.1.0"
edition = "2024"

[features]
# Layer-3 headless GPU pixel-verification tests (tests/layer3_headless_pixel.rs).
# Off by default so normal `cargo test` needs no GPU; CI / local-GPU runs enable
# it with `cargo test --features layer3`.
layer3 = []

[dependencies]
bevy = { version = "0.19", default-features = false, features = ["3d", "ui"] }
bevy_egui = "0.40"
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
movement_core = { path = "../../apps/scene_server/native/movement_core" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
# PNG encode for the layer3 showcase renders (saves the GPU readback to disk).
png = "0.17"

[[bench]]
name = "predictor_bench"
harness = false

# Bevy performance: optimize ALL dependencies (notably bevy's math / ECS / render
# pipeline) to opt-level 3 even in dev builds. Without this, a debug build runs
# bevy completely unoptimized and the client is CPU-bound at ~50 fps with
# unstable frame pacing — which presents as whole-frame judder / "screen flicker"
# on any camera motion (GPU sits ~50% idle while the CPU can't feed it). The
# client crate itself stays at opt-level 1 so iterative recompiles remain fast.
# This is Bevy's officially recommended dev profile. See bevyengine.org setup.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
