[package]
name = "coordinate_system"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "coordinate_system"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jemalloc-info = "0.5"
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls", "stats"] }
rustler = "0.26.0"
rayon = "1.5.3"
