[package]
name = "field_kernel"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "field_kernel"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "=0.37.3"

# 梯队2 step2.5b(NIF-11/15):NIF panic 必须 unwind 让 Rustler wrapper 在 FFI 边界 catch_unwind,禁 abort。
[profile.release]
panic = "unwind"
